# Game_Checker

./: CMakeLists -New.txt  CMakeLists.txt  README.md  chat_ai.h  checker.h  games_db.h  hardware.h  main - New.cpp  mainwindow - New.cpp  mainwindow - New.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  styles.qss
